--- a/ESP32Code/UPCEsp32Emulator/platformio.ini
+++ b/ESP32Code/UPCEsp32Emulator/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
 board_build.partitions = default_no_ota.csv
+lib_deps = bblanchon/ArduinoJson@^6.21.3
