--- a/ESP32Code/UPCEsp32Emulator/platformio.ini
+++ b/ESP32Code/UPCEsp32Emulator/platformio.ini
@@ -16,3 +16,4 @@ monitor_speed = 115200
 upload_speed = 921600
 board_build.partitions = default_no_ota.csv
 lib_deps = bblanchon/ArduinoJson@^6.21.3
+; build_type = debug
